# approximate-graph-symmetries

./: .gitignore  Dockerfile  Exapmle_computeS.ipynb  IHPerm.jl  LICENSE  README.md  _quarto.yml  config.yaml  conjugate_gradients.ipynb  convert_instance.py  default.html  default.qmd  demo.ipynb  example.ipynb  main.py  manifold.jl  method_resources.yaml  model.jl  optimize.jl  parameter_sweep_config.yaml  pyproject.toml  pyproject_container.toml  requirements.txt  run.py  sinkhorn.jl  sorting_networks.jl  trust_region.ipynb  trust_region.qmd  trust_region.quarto_ipynb
AGS/: annealing.py  initialization.py  metrics.py  projection.py  util.py
AGS/methods/: __init__.py
AGS/methods/dimensionality_reduction/: __init__.py  dimensionality_reduction.py
AGS/methods/interior_point/: __init__.py  interior_point.py
AGS/methods/manifold/: __init__.py  doublystochastic.py  manifold.py
AGS/methods/naive_pairwise_swap/: naive_pairwise_swap.py
AGS/methods/orthogonal_relaxation/: README.md  __init__.py  orthogonal_relaxation.py
AGS/methods/ot4p/: __init__.py  ot4p.py
AGS/methods/qsa/: __init__.py  objectives.py  qsa.py  qsa_dynamic.py
AGS/methods/sa/: __init__.py  objectives.py  sa.py
AGS/methods/softsort/: __init__.py  softsort.py
_output/: trust_region.html
ags/: sa.py
ags/graspologic/match/: gmp.py  qap.py
ags/relaxationmethods/: graph_instances.py  utils.py
ags/relaxationmethods/trustregion/: __init__.py
approximate-graph-symmetries/: annealer.py
approximate-graph-symmetries/graspologic/: __init__.py
approximate-graph-symmetries/qp/: solve.py
apx_julia/: optimize.jl
config/: config.yaml  method_resources.yaml  parameter_sweep_config.yaml
data/example/BA/: BA_nNodes20_density15.p  (+1 more)
notebooks/: 00_Load_and_Process.qmd  01_EDA.qmd  01_Generate_New_Graph_Types.qmd  02_Process_Brain_Connectivity.qmd  03_Analysis.qmd  04_Final.qmd  05_Final2.qmd
scripts/: generate_jobs.py  parameter_sweep.py  parameter_sweep_parallel.py  pbs_template.j2  pbs_template.txt  rerun_job_template.j2  run_parameter_sweep.pbs.sh  submit_all_methods.j2
thesis/: outline.md
thesis/md/: thesis.md
thesis/tex/: test.tex
(+20 files in other folders)
