[project]
name = "approximate-graph-symmetries"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cyipopt>=1.5.0",
    "numba>=0.58.0",
    "numpy>=2.2.0",
    "pingouin>=0.5.5",
    "pymanopt[torch]>=2.2.1",
    "pyyaml>=6.0.2",
    "scikit-posthocs>=0.11.4",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "torch-linear-assignment",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=9.3.0",
    "isort>=6.0.1",
    "jinja2>=3.1.0",
    "jupyter>=1.1.1",
    "ruff>=0.11.13",
    "scienceplots>=2.1.1",
    "tabulate>=0.9.0",
]

[tool.uv.sources]
torch-linear-assignment = { git = "https://github.com/ivan-chai/torch-linear-assignment.git" }
